Migrate build system to Quarkus